# jargonai

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
config/: .env.example
docker/: Dockerfile  docker-entrypoint.sh
jargonai/: __main__.py  api_request_handler.py  conversation.py  emulator.py  functiongen.py  prod.requirements.txt  run_chat_bot.py  server.py  sounds.py
sandbox/: SMS_api.py  basic_bot.py  bot.py  chat_handler.py  chathand.py  direct_message_testing.py  input_form.py  resp.py  twilio_api.py  whasap.py
